Fix Menu's list width.
To undisplay horizontal scroll bar on Left Menu's at following page.
http://www.getmdl.io/templates/dashboard/index.html

--- a/src/menu/_menu.scss
+++ b/src/menu/_menu.scss
@@ -120,6 +120,7 @@
 }
 
 .mdl-menu__item {
+  box-sizing: border-box;
   display: block;
   border: none;
   color: $default-item-text-color;
